# cpp-ipc-msgqueue

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ipc_msg_queue.h
include/: ipc_msg_queue.h
tests/: receiver.cpp  sender.cpp
